--- a/default/data/ui/views/3cx_call_reports.xml
+++ b/default/data/ui/views/3cx_call_reports.xml
@@ -1,4 +1,4 @@
-<form version="1.1">
+<form version="1.1" script="recordingbtn.js">
   <label>Call Log</label>
   <description>Note: Not all calls have recordings.</description>
   <search id="all_calls_search">
@@ -129,11 +129,8 @@
 | rename recording_url as Recording</query>
         </search>
         <option name="count">25</option>
-        <option name="drilldown">row</option>
+        <option name="drilldown">none</option>
         <option name="refresh.display">progressbar</option>
-        <drilldown>
-          <link target="_blank">search?q=%60default_index%60%20sourcetype%3D%223cx%3Acalls%22%20host%3D$row.host$%20call_id%3D$row.call_id$&amp;earliest=$timeRange.earliest$&amp;latest=$timeRange.latest$</link>
-        </drilldown>
       </table>
     </panel>
   </row>
