--- a/default/data/ui/views/3cx_overview.xml
+++ b/default/data/ui/views/3cx_overview.xml
@@ -44,7 +44,7 @@
         <fieldForLabel>officeNames</fieldForLabel>
         <fieldForValue>host</fieldForValue>
         <search>
-          <query>`3cx_host_filter_search`</query>
+          <query>| `3cx_host_filter_search`</query>
           <earliest>$tOverview.earliest$</earliest>
           <latest>$tOverview.latest$</latest>
         </search>
