--- a/default/data/ui/views/3cx_queue_extensions.xml
+++ b/default/data/ui/views/3cx_queue_extensions.xml
@@ -31,7 +31,7 @@
       <fieldForLabel>officeNames</fieldForLabel>
       <fieldForValue>host</fieldForValue>
       <search>
-        <query>`3cx_host_filter_search`</query>
+        <query>| `3cx_host_filter_search`</query>
         <earliest>$tspan1.earliest$</earliest>
         <latest>$tspan1.latest$</latest>
       </search>
