--- a/default/data/ui/views/3cx_queue_overview.xml
+++ b/default/data/ui/views/3cx_queue_overview.xml
@@ -54,7 +54,7 @@
       <fieldForLabel>officeNames</fieldForLabel>
       <fieldForValue>host</fieldForValue>
       <search>
-        <query>`3cx_host_filter_search`</query>
+        <query>| `3cx_host_filter_search`</query>
         <earliest>$time_overview.earliest$</earliest>
         <latest>$time_overview.latest$</latest>
       </search>
