--- a/default/data/ui/views/3cx_queue_extensions.xml
+++ b/default/data/ui/views/3cx_queue_extensions.xml
@@ -1,7 +1,7 @@
 <form stylesheet="table_highlight.css" script="table_highlight.js" version="1.1">
   <label>Queue Extensions</label>
   <search id="agents_login_timerange_finder">
-    <query>| makeresults | addinfo | eval extra_earliest_time=relative_time(info_min_time, "-1d"), extra_latest_time=info_max_time</query>
+    <query>| makeresults | addinfo | eval extra_earliest_time=relative_time(info_min_time, "-1d"), info_max_time=if(info_max_time="+Infinity", relative_time(now(), "+7d"), info_max_time), extra_latest_time=info_max_time | fillnull extra_earliest_time value=0</query>
     <earliest>$tspan1.earliest$</earliest>
     <latest>$tspan1.latest$</latest>
     <done>
