--- a/default/data/ui/views/3cx_agent_logins.xml
+++ b/default/data/ui/views/3cx_agent_logins.xml
@@ -2,7 +2,7 @@
   <label>Agent Logins</label>
   <description>View statistics and summaries for Agent login sessions</description>
   <search id="agents_login_timerange_finder">
-    <query>| makeresults | addinfo | eval extra_earliest_time=relative_time(info_min_time, "-1d"), info_max_time=if(info_max_time="+Infinity", relative_time(now(), "+7d"), info_max_time), extra_latest_time=info_max_time | fillnull extra_earliest_time value=0</query>
+    <query>| makeresults | addinfo | eval extra_earliest_time=relative_time(info_min_time, `3cx_max_agent_login_time`), info_max_time=if(info_max_time="+Infinity", relative_time(now(), "+7d"), info_max_time), extra_latest_time=info_max_time | fillnull extra_earliest_time value=0</query>
     <earliest>$time_field.earliest$</earliest>
     <latest>$time_field.latest$</latest>
     <done>
